2011-07-13 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Added outputNTUP_L1TGCFile to script/Reco_trf.py
	* Tagging as PATJobTransforms-00-03-53

2011-06-15 Junji Tojo <Junji.Tojo@cern.ch>
	* Add outputNTUP_SMQCDFile in script/Reco_trf.py
	* Tagging as PATJobTransforms-00-03-52

2011-06-14 Susumu Oda <Susumu.Oda@cern.ch>
	* Changed default RDO to mc10_7TeV (MC10b) (python/DefaultInputs.py).
	* Tagging as PATJobTransforms-00-03-51

2011-06-14 Susumu Oda <Susumu.Oda@cern.ch>
	* Changed default ESD and AOD to data11_7TeV (python/DefaultInputs.py).
	* Changed default cosmic ByteStream file to data11_cos (python/DefaultInputs.py).
	* Tagging as PATJobTransforms-00-03-50

2011-06-09 Rolf Seuster <seuster AT  cern.ch>
	* re-enable ESDtoESD re-reconstruction, if user specifies doESD in preExec
	* Tagging as PATJobTransforms-00-03-49

2011-06-08  Junji Tojo <Junji.Tojo@cern.ch>
        * Add inputTAGFile in script/Reco_trf.py
        * Tagging as PATJobTransforms-00-03-48

2011-06-08 Susumu Oda <Susumu.Oda@cern.ch>
	* Add outputNTUP_FASTMONFile to ListOfDefaultPositionalKeys of Merging_trf.py
	  (PATJobTransforms-00-03-45 was not reflected in trunk)
	* Tagging as PATJobTransforms-00-03-47

2011-06-08 Susumu Oda <Susumu.Oda@cern.ch>
	* Changed default ByteStream file to data11_7TeV (python/DefaultInputs.py).  
	* Tagging as PATJobTransforms-00-03-46

2011-05-31 Walter Lampl <walter.lampl@ cern.ch>
	* Add outputNTUP_FASTMONFile to ListOfDefaultPositionalKeys of Merging_trf.py
	* Tagging as PATJobTransforms-00-03-45

2011-05-11  Junji Tojo <Junji.Tojo@cern.ch>
	* Fixed a typo for NTUP_BTAGD3PD in script/Reco_trf.py
	* Tagging as PATJobTransforms-00-03-44

2011-05-24  Maarten Boonekamp
	* add NTUP_SMWZSOFT to Reco_trf
	* Tagging as PATJobTransforms-00-03-43

2011-05-21  Maarten Boonekamp
	* add NTUP_LARNOISE
	* Tagging as PATJobTransforms-00-03-42

2011-05-16  Rolf Seuster <seuster AT cern.ch>
	* run DQHistogramMerge with only single process even with athenaMP